renderプロパティ、VJNodeなどについて学んだ07-10

--- a/02.html
+++ b/02.html
@@ -15,7 +15,7 @@
 	<div id="app">
 		<p v-bind:class="error_class">エラーです</p><!-- v-bindで属性の中の書き換えができる。
 		{{}}マスダッシュ記法はhtmlタグ内にしか使えないというルールがある。
-		bindは割り当てるという意味、class属性はvueで割り当てるという宣言 -->
+		bindは割り当てるという意味、class属性はvueで割り当てるという宣言。ちなみに省略できて :class=""でもOK -->
 
 		<img v-bind:src="img_src">
 	</div>
