--- a/06 コンポーネントの呼び出し.html
+++ b/06 コンポーネントの呼び出し.html
@@ -26,7 +26,8 @@
 			<strong>Error!</strong>
 			<slot></slot>
 		</div>
-		`,//シングルクォーテーションではない
+		`,/*シングルクォーテーションではない
+		    複雑なテンプレートでも必ずベースのタグの中で完結させる*/
 		methods: {
 			caution: function() {
 				alert("クリックされました");
