--- a/03 メソッドの定義.html
+++ b/03 メソッドの定義.html
@@ -8,7 +8,7 @@
 
 <div id="app"> <!--class属性だとダメ-->
 	<p>{{ now }}</p>
-	<button v-on:click="time">時刻を表示する</button><!--v-onディレクティブ、クリックした時にtimeというメソッドを動作-->
+	<button v-on:click="time">時刻を表示する</button><!--v-onディレクティブ、クリックした時にtimeというメソッドを動作 v-on:は@で書き換え可能　-->
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
